example/ffi/headers/rune.h

typedef struct IntegerOrErrorResult IntegerOrErrorResult_t;
typedef struct Error Error_t;
typedef struct CapabilityResult CapabilityResult_t;
/** \brief
 *  Like [`slice_ref`] and [`slice_mut`], but with any lifetime attached
 *  whatsoever.
 *
 *  It is only intended to be used as the parameter of a **callback** that
 *  locally borrows it, due to limitations of the [`ReprC`][
 *  `trait@crate::layout::ReprC`] design _w.r.t._ higher-rank trait bounds.
 *
 *  # C layout (for some given type T)
 *
 *  ```c
 *  typedef struct {
 *      // Cannot be NULL
 *      T * ptr;
 *      size_t len;
 *  } slice_T;
 *  ```
 *
 *  # Nullable pointer?
 *
 *  If you want to support the above typedef, but where the `ptr` field is
 *  allowed to be `NULL` (with the contents of `len` then being undefined)
 *  use the `Option< slice_ptr<_> >` type.
 */
typedef struct {

  uint8_t *ptr;

  size_t len;

} slice_raw_uint8_t;
typedef struct {

  void *user_data;

  void (*set_parameter)(void *);

  IntegerOrErrorResult_t (*generate)(void *, slice_raw_uint8_t);

  void (*free)(void *);

} Capability_t;
typedef struct RuneResult RuneResult_t;
typedef uint32_t LogLevel_t;
typedef struct {

  LogLevel_t level;

  slice_raw_uint8_t target;

  char *message;

} LogRecord_t;
typedef struct {

  void *env_ptr;

  RuneResult_t *(*call)(void *, LogRecord_t);

  void (*free)(void *);

} BoxDynFnMut1_RuneResult_ptr_LogRecord_t;
typedef struct {

  void *env_ptr;

  CapabilityResult_t *(*call)(void *);

  void (*free)(void *);

} BoxDynFnMut0_CapabilityResult_ptr_t;
/** \brief
 *  `&'lt [T]` but with a guaranteed `#[repr(C)]` layout.
 *
 *  # C layout (for some given type T)
 *
 *  ```c
 *  typedef struct {
 *      // Cannot be NULL
 *      T * ptr;
 *      size_t len;
 *  } slice_T;
 *  ```
 *
 *  # Nullable pointer?
 *
 *  If you want to support the above typedef, but where the `ptr` field is
 *  allowed to be `NULL` (with the contents of `len` then being undefined)
 *  use the `Option< slice_ptr<_> >` type.
 */
typedef struct {

  uint8_t const *ptr;

  size_t len;

} slice_ref_uint8_t;
/** \brief
 * Get a reference to the `u8` in this `RuneResult`, or `null` if not present.
 */
uint8_t const *rune_result_RuneResult_get_ok(RuneResult_t const *result);
/** \brief
 * Get a reference to the `BoxedError` in this `RuneResult`, or `null` if not
 * present.
 */
Error_t *const *rune_result_RuneResult_get_err(RuneResult_t const *result);
/** \brief
 * Extract the `u8`, freeing the `RuneResult` and crashing if it actually
 * contains a `BoxedError`.
 */
uint8_t rune_result_RuneResult_take_ok(RuneResult_t *result);
/** \brief
 * Extract the `BoxedError`, freeing the `RuneResult` and crashing if it
 * actually contains a `u8`.
 */
Error_t *rune_result_RuneResult_take_err(RuneResult_t *result);