example/rune_bindings.dart


  late final _rune_result_RuneResult_get_ok_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_RuneResult_get_ok>>(
          'rune_result_RuneResult_get_ok');
  late final _dart_rune_result_RuneResult_get_ok
      _rune_result_RuneResult_get_ok = _rune_result_RuneResult_get_ok_ptr
          .asFunction<_dart_rune_result_RuneResult_get_ok>();

  /// \brief
  /// Get a reference to the `BoxedError` in this `RuneResult`, or `null` if not
  /// present.
  ffi.Pointer<ffi.Pointer<Error>> rune_result_RuneResult_get_err(
    ffi.Pointer<RuneResult> result,
  ) {
    return _rune_result_RuneResult_get_err(
      result,
    );
  }

  late final _rune_result_RuneResult_get_err_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_RuneResult_get_err>>(
          'rune_result_RuneResult_get_err');
  late final _dart_rune_result_RuneResult_get_err
      _rune_result_RuneResult_get_err = _rune_result_RuneResult_get_err_ptr
          .asFunction<_dart_rune_result_RuneResult_get_err>();

  /// \brief
  /// Extract the `u8`, freeing the `RuneResult` and crashing if it actually
  /// contains a `BoxedError`.
  int rune_result_RuneResult_take_ok(
    ffi.Pointer<RuneResult> result,
  ) {
    return _rune_result_RuneResult_take_ok(
      result,
    );
  }

  late final _rune_result_RuneResult_take_ok_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_RuneResult_take_ok>>(
          'rune_result_RuneResult_take_ok');
  late final _dart_rune_result_RuneResult_take_ok
      _rune_result_RuneResult_take_ok = _rune_result_RuneResult_take_ok_ptr
          .asFunction<_dart_rune_result_RuneResult_take_ok>();

  /// \brief
  /// Extract the `BoxedError`, freeing the `RuneResult` and crashing if it
  /// actually contains a `u8`.
  ffi.Pointer<Error> rune_result_RuneResult_take_err(
    ffi.Pointer<RuneResult> result,
  ) {
    return _rune_result_RuneResult_take_err(
      result,
    );
  }

  late final _rune_result_RuneResult_take_err_ptr =
      _lookup<ffi.NativeFunction<_c_rune_result_RuneResult_take_err>>(
          'rune_result_RuneResult_take_err');
  late final _dart_rune_result_RuneResult_take_err
      _rune_result_RuneResult_take_err = _rune_result_RuneResult_take_err_ptr
          .asFunction<_dart_rune_result_RuneResult_take_err>();
}

class IntegerOrErrorResult extends ffi.Opaque {}

class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi.Pointer<ffi.NativeFunction<_typedefC_1>> __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Int8> __opaque;
}

class _opaque_pthread_t extends ffi.Struct {
  @ffi.Int64()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Int8> __opaque;
}

class Error extends ffi.Opaque {}

class CapabilityResult extends ffi.Opaque {}

/// \brief
/// Like [`slice_ref`] and [`slice_mut`], but with any lifetime attached
/// whatsoever.
///
/// It is only intended to be used as the parameter of a **callback** that
/// locally borrows it, due to limitations of the [`ReprC`][
/// `trait@crate::layout::ReprC`] design _w.r.t._ higher-rank trait bounds.
///
/// # C layout (for some given type T)
///
/// ```c
/// typedef struct {
/// // Cannot be NULL
/// T * ptr;
/// size_t len;
/// } slice_T;
/// ```
///
/// # Nullable pointer?
///
/// If you want to support the above typedef, but where the `ptr` field is
/// allowed to be `NULL` (with the contents of `len` then being undefined)
/// use the `Option< slice_ptr<_> >` type.
class slice_raw_uint8_t extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Uint64()
  external int len;
}

class Capability_t extends ffi.Struct {
  external ffi.Pointer<ffi.Void> user_data;

  external ffi.Pointer<ffi.NativeFunction<_typedefC_2>> set_parameter;

  external ffi.Pointer<ffi.NativeFunction<_typedefC_3>> generate;

  external ffi.Pointer<ffi.NativeFunction<_typedefC_4>> free;
}

class RunicosBaseImage extends ffi.Opaque {}

class RuneResult extends ffi.Opaque {}

class LogRecord_t extends ffi.Struct {
  @ffi.Uint32()
  external int level;

  external slice_raw_uint8_t target;

  external ffi.Pointer<ffi.Int8> message;
}

class BoxDynFnMut1_RuneResult_ptr_LogRecord_t extends ffi.Struct {
  external ffi.Pointer<ffi.Void> env_ptr;

  external ffi.Pointer<ffi.NativeFunction<_typedefC_5>> call;

  external ffi.Pointer<ffi.NativeFunction<_typedefC_6>> free;
}

class BoxDynFnMut0_CapabilityResult_ptr_t extends ffi.Struct {
  external ffi.Pointer<ffi.Void> env_ptr;

  external ffi.Pointer<ffi.NativeFunction<_typedefC_7>> call;

  external ffi.Pointer<ffi.NativeFunction<_typedefC_8>> free;
}

class WasmerRuntimeResult extends ffi.Opaque {}

class WasmerRuntime extends ffi.Opaque {}

/// \brief
/// `&'lt [T]` but with a guaranteed `#[repr(C)]` layout.
///
/// # C layout (for some given type T)
///
/// ```c
/// typedef struct {
/// // Cannot be NULL
/// T * ptr;
/// size_t len;
/// } slice_T;
/// ```
///
/// # Nullable pointer?
///
/// If you want to support the above typedef, but where the `ptr` field is
/// allowed to be `NULL` (with the contents of `len` then being undefined)
/// use the `Option< slice_ptr<_> >` type.
class slice_ref_uint8_t extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Uint64()
  external int len;
}

const int LOG_LEVEL_ERROR = 1;

const int LOG_LEVEL_WARN = 2;

const int LOG_LEVEL_INFO = 3;

const int LOG_LEVEL_DEBUG = 4;

const int LOG_LEVEL_TRACE = 5;

const int true_1 = 1;

const int false_1 = 0;

const int __bool_true_false_are_defined = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 0;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 0;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_64_BIT_INO_T = '\$INODE64';

const String __DARWIN_SUF_1050 = '\$1050';

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int __DARWIN_WCHAR_MAX = 2147483647;

const int __DARWIN_WCHAR_MIN = -2147483648;

const int __DARWIN_WEOF = -1;

const int _FORTIFY_SOURCE = 2;

const int NULL = 0;

const int USER_ADDR_NULL = 0;

const int __WORDSIZE = 64;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

typedef _c_rune_result_IntegerOrErrorResult_is_ok = ffi.Uint8 Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);

typedef _dart_rune_result_IntegerOrErrorResult_is_ok = int Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);

typedef _c_rune_result_IntegerOrErrorResult_is_err = ffi.Uint8 Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);

typedef _dart_rune_result_IntegerOrErrorResult_is_err = int Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);

typedef _c_rune_result_IntegerOrErrorResult_free = ffi.Void Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);

typedef _dart_rune_result_IntegerOrErrorResult_free = void Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);

typedef _c_rune_result_IntegerOrErrorResult_get_ok = ffi.Pointer<ffi.Uint64>
    Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);

typedef _dart_rune_result_IntegerOrErrorResult_get_ok = ffi.Pointer<ffi.Uint64>
    Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);

typedef _c_rune_result_IntegerOrErrorResult_get_err
    = ffi.Pointer<ffi.Pointer<Error>> Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);

typedef _dart_rune_result_IntegerOrErrorResult_get_err
    = ffi.Pointer<ffi.Pointer<Error>> Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);

typedef _c_rune_result_IntegerOrErrorResult_take_ok = ffi.Uint64 Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);

typedef _dart_rune_result_IntegerOrErrorResult_take_ok = int Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);

typedef _c_rune_result_IntegerOrErrorResult_take_err = ffi.Pointer<Error>
    Function(
  ffi.Pointer<IntegerOrErrorResult> result,
);
